Small cleanup